--- a/views/aboutus/aboutus.handlebars
+++ b/views/aboutus/aboutus.handlebars
@@ -22,7 +22,7 @@
 
   </div>
   <div class="col-lg-8">
-    <h2 id="our-mission">Our mission is to make finding clinical trials easier and faster than ever before. Life changing therapies that can significantly improve the quality of life of Age Related Macular Degenration patients are oftentimes hard to find. We are pioneering new approaches to eliminate the complexity of finding said treatments.</h2> 
+    <h2 id="our-mission">Our mission is to make finding clinical trials easier and faster than ever before. Life changing therapies that can significantly improve the quality of life of Age Related Macular Degenration patients are oftentimes hard to find. We are pioneering new approaches to eliminate the complexity of finding such treatments.</h2> 
     
     <p class="lead about-p"> 
     Founded in 2016, CesarCells.com combines state-of-the-art research and <strong>ARMD Clinical Trials inclusion criteria</strong>. This has allowed us to advance the treating of patients in <strong> ARMD Clinical Trials </strong> at an accelerated pace. We are investigating many <strong>ARMD Clinical Trials </strong> that show the most promise for a cure.
