--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -36,12 +36,10 @@
               <a href="#" class="dropdown-toggle" id="a-dash-one" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cogs" aria-hidden="true"></i>
 My Tools <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
-              {{#if user.geneticTestTaken}}
-                <li><a href=""></a></li>
-                {{else}}               
-                <li><a href="/tools/gene-data-approval">Connect With 23AndMe</a></li>
-                <li role="separator" class="divider"></li>
-              {{/if}}
+                           
+                {{!-- <li><a href="/tools/genetic">Connect With 23AndMe</a></li>
+                <li role="separator" class="divider"></li> --}}
+              
                 <li><a href="/tools/amsler-test">Take The Amsler Test</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/tools/start-health-assessment">Take Clinical Trial Assessment</a></li>
