--- a/views/resources/whats_stargardts.handlebars
+++ b/views/resources/whats_stargardts.handlebars
@@ -25,10 +25,17 @@
             Photoreceptor cells in the retina provide vision by conveying information from the visual field to the brain. The macula is responsible for sharp central vision — for tasks like reading, watching television, and looking at faces.
             Decreased central vision is a hallmark of Stargardt disease. Side vision is usually preserved. Stargardt disease typically develops during childhood and adolescence. Also involved in Stargardt disease is a region beneath the macula called the retinal pigment epithelium.
           </p> <br>
+
           
       </section>
     </div>
 
+  </div>
+  <div class="row">
+    <div class="col-md-12 embed-responsive embed-responsive-16by9">
+
+    <iframe width="960" height="615" src="https://www.youtube.com/embed/0XCKve0Pxfo" class="embed-responsive-item" allowfullscreen></iframe>
+    </div>
   </div>
   <div class="row">
     <div class="col-lg-9">
