--- a/views/contactus/contact_us.handlebars
+++ b/views/contactus/contact_us.handlebars
@@ -1,9 +1,12 @@
-<div class="row">
+<div class="container">
+<div class="row" style="margin-top: 190px; margin-bottom: 190px">
+  <div class="col-sm-12 col-lg-2">
 
-  <div class="col-lg-12" id="wrap-contact-us-form">
-        <h2>CONTACT US</h2>
-
-    <form action="/contact_us/send" method="post" class="form-horizontal form-contact-us">
+  </div>
+  <div class="col-sm-12 col-lg-10">
+        <h2 style="text-align: left">CONTACT US</h2>
+        <p class="lead" style="text-align: left">Cesarcells is a solution for retinal disease patients. If you or someone you know is interested in qualifying for a clinical trial, please complete the form below and we will promptly reply.</p class="lead">
+    <form action="/contact_us/send" method="post" class="form-horizontal">
 
         <div class="form-group">
           <label class="col-sm-2 control-label">Name: </label>
@@ -20,13 +23,13 @@
         </div>
 
         <div class="form-group">
-          <label class="col-sm-2 control-label" for="comments">Comments:</label>
+          <label class="col-sm-3 control-label" for="comments">Comments:</label>
           <div class="col-sm-10">
-            <textarea rows="4" cols="40" id="comments" name="content" placeholder="Your Message..."></textarea>
+            <textarea rows="4" cols="40" name="content" placeholder="Your Message..."></textarea>
           </div>
         </div>
         <div class="form-group">
-        <label class="col-sm-2 control-label" for="submit"></label>
+        <label class="col-sm-7 control-label" for="submit"></label>
 
           <div class="col-sm-10">
             <input type="submit" id="main-btn" value="Submit" />
@@ -37,5 +40,9 @@
     </form>
 
   </div>
+  <div class="col-sm-12 col-lg-2">
 
+  </div>
+
+</div>
 </div>
