--- a/views/resources/glossary.handlebars
+++ b/views/resources/glossary.handlebars
@@ -10,7 +10,7 @@
  
 </div>
 
-<div class="row">
+<div class="row" style="margin-left: 10%">
   <ul class="shortcuts">
   <li>JUMP TO:</li>
   <li><a class="glossary-a" href="#A" title="Terms beginning with A">A</a></li>
