--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-md-5">
+            <div class="col-sm-12 col-md-5">
 
             {{!-- <p>{{user.profileimage.path}}</p> --}}
                 <a href="/users/view-results">
@@ -26,21 +26,20 @@
                 <h3><span>YOUR RESULTS</span></h3>
                 </a>
             </div>
-            <div class="col-md-3" id="col-one-dash-images">
+            <div class="col-sm-12 col-md-3" id="col-one-dash-images">
                 <div class="col-xs-9">
                     <h2 id="h1-images">What you can do</h2>
                 </div>
-                {{#unless assessmentTaken}}
-                <a href="/tools/start-health-assessment">
-                <img src='/assets/images/humancell.png' class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash"/>
+                
+                {{#if user.assessmentTaken}}
+
+                <a href="#" class="disabled_a_href">
+                <img src='http://www.clipartbest.com/cliparts/9cR/Ryb/9cRRyboGi.png' class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash"/>
                 <h3 id="top-left-h3"><span>Take The Clinical Trial <br>Assessment</span></h3>
                 </a>
-                {{/unless}}
-                
-                {{#if assessmentTaken}}
-
-                <a href="#">
-                <img src='/assets/images/back1.jpeg' class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash" style="-webkit-filter: grayscale(100%); filter: grayscale(100%)" />
+                {{else}}
+                <a href="/tools/start-health-assessment">
+                <img src='/assets/images/humancell.png' class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash"/>
                 <h3 id="top-left-h3"><span>Take The Clinical Trial <br>Assessment</span></h3>
                 </a>
                 {{/if}}
@@ -49,21 +48,28 @@
                 <img src='/assets/images/back1.jpeg' class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash2">
                 <h3 id="top-right-h3"><spanid="top-right-span">My Genetics</span></h3>
                 </a>
+            
             </div>
              {{!End col-md-4}}
             {{!-- <div class="col-md-6">
             
             </div> --}}
-            <div class="col-md-3" id="col-two-dash-images"> 
+            <div class="col-sm-12 col-md-3" id="col-two-dash-images"> 
                 <a href="/tools/amsler-test">
 
                 <img src="/assets/images/balls.jpeg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash3"/>
                 <h3><span>Take the Amsler Test</span></h3>
                 </a>
 
-                <a href="/tools/all-trials">
+                {{#if user.geneReportPurchase}}
+                <a href="/charge" class="disabled_a_href">
+                <img src="http://www.clipartbest.com/cliparts/9cR/Ryb/9cRRyboGi.png" class="img-rounded hvr-wobble-vertical" alt="Cinque Terre" width="304" height="206" id="img-dash4" />
+                <h3 id="top-right-h3"><spanid="top-right-span">Purchase Gene Report</span></h3>
+                {{else}}
+                <a href="/charge">
                 <img src="/assets/images/background6.jpeg" class="img-rounded hvr-wobble-vertical" alt="Cinque Terre" width="304" height="206" id="img-dash4"/>
-                <h3 id="top-right-h3"><spanid="top-right-span">Search For Trials</span></h3>
+                <h3 id="top-right-h3"><spanid="top-right-span">Purchase Gene Report</span></h3>
+                {{/if}}
                 </a>
 
 
